--- a/SupplierRanking/Content/css/login.css
+++ b/SupplierRanking/Content/css/login.css
@@ -309,9 +309,9 @@
 	height: 34px;
 }
 
-/*.switch input {
-	display: none;
-}*/
+.switch-funcionario {
+    left: 1em;
+}
 
 .switch-wrapper {
     border: 1px solid #0C496BE6;
@@ -371,7 +371,8 @@ input:checked+.slider:before {
 	transform: translateX(26px);
 }
 
-.active-switch {
+.active-switch,
+.active-switch-pessoa {
     background-color: #0C496Bc9;
     border: 2px solid #DAA520;
     box-shadow: 1px 2px 4px 4px #CCC;
