--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -106,26 +106,28 @@
         <!-- FIM - Conteúdo -->
 
         <!-- INÍCIO - Script's de configuração -->
-        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
         <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
-        <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
-        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
         <script src="~/Content/vendor/bootstrap/js/popper.min.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.js"></script>
+        <script src="~/Content/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="~/Content/vendor/bootstrap/js/tooltip.js"></script>
-       
         <script src="~/Content/vendor/select2/select2.js"></script>
         <script src="~/Content/vendor/select2/select2.min.js"></script>
-      
+        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
+
         <script>
             $('.js-tilt').tilt({
                 scale: 1.1
             })
         </script>
+
         <!-- FIM - Script's de configuração -->
 
         <!-- INÍCIO - Nossos JS -->
         <script src="~/Content/js/login.js"></script>
+        <script src="~/Content/js/cadastro.js"></script>
+        <script src="~/Content/js/update.js"></script>
    
     </body>
 </html>
