--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -126,7 +126,7 @@
 
         <!-- INÍCIO - Nossos JS -->
         <script src="~/Content/js/login.js"></script>
-        <script src="~/Content/js/cadastro.js"></script>
+        @*<script src="~/Content/js/cadastro.js"></script>*@
         <script src="~/Content/js/update.js"></script>
    
     </body>
