--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -38,12 +38,12 @@
         <script src="~/Content/vendor/select2/select2.js"></script>
         <script src="~/Content/vendor/select2/select2.min.js"></script>
 
-        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
+        @*<script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
         <script>
             $('.js-tilt').tilt({
                 scale: 1.1
             })
-        </script>
+        </script>*@
         <!-- FIM - Script's de configuração -->
 
         <!-- INÍCIO - Nossos JS -->
