La - Fim do Refactor do Login

--- a/SupplierRanking/Views/Shared/LoginLayout.cshtml
+++ b/SupplierRanking/Views/Shared/LoginLayout.cshtml
@@ -5,28 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>@ViewBag.Title - Supplier Ranking</title>
 
-        <!-- INÍCIO - Nossos CSS -->
+        <!-- INICIO - Nossos CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700">
         <link rel="stylesheet" href="~/Content/config/css/style.css"/>
         <link rel="stylesheet" href="~/Content/css/style_login.css" />
         <link rel="stylesheet" href="~/Content/css/util.css" />
         <link rel="stylesheet" href="~/Content/css/login.css" />
         <!-- FIM - Nossos CSS -->
-        
+
         <!-- Logo da Aba -->
         <link rel="icon" href="~/Content/images/logo.png" type="image/x-icon" />
     </head>
     <body>
-        <!-- INÍCIO - Conteúdo -->
+        <!-- INICIO - Conteudo -->
         <div class="container-login">
             <div class="wrap-login justify-content-center">
                 @RenderBody()
             </div>
         </div>
-        <!-- FIM - Conteúdo -->
+        <!-- FIM - Conteudo -->
 
-        <!-- INÍCIO - Script's de configuração -->
-        
+        <!-- INÍCIO - Script's de configuracao -->
         <script src="~/Content/vendor/jquery/jquery-3.2.1.min.js"></script>
 
         <script src="~/Content/vendor/bootstrap/js/popper.js"></script>
@@ -38,13 +37,13 @@
         <script src="~/Content/vendor/select2/select2.js"></script>
         <script src="~/Content/vendor/select2/select2.min.js"></script>
 
-        @*<script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
+        <script src="~/Content/vendor/tilt/tilt.jquery.min.js"></script>
         <script>
             $('.js-tilt').tilt({
                 scale: 1.1
             })
-        </script>*@
-        <!-- FIM - Script's de configuração -->
+        </script>
+        <!-- FIM - Script's de configuracao -->
 
         <!-- INÍCIO - Nossos JS -->
         <script src="~/Content/js/login.js"></script>
