--- a/SupplierRanking/Content/css/login.css
+++ b/SupplierRanking/Content/css/login.css
@@ -1,18 +1,21 @@
 ﻿
-/*//////////////////////////////////////////////////////////////////
-[ Utility ]*/
+@media (max-width: 992px) {
+	.wrap-login {
+		padding: 177px 90px 33px 85px;
+	}
+}
 
+@media (max-width: 768px) {
+	.wrap-login {
+		padding: 100px 80px 33px 80px;
+	}
+}
 
-/*.txt1, .txt2  {
-  font-family: inherit;
-  font-size: 13px;
-  line-height: 1.5;
-  color: #fff;
-}*/
-
-
-/*//////////////////////////////////////////////////////////////////
-[ Login ]*/
+@media (max-width: 576px) {
+	.wrap-login {
+		padding: 100px 15px 33px 15px;
+	}
+}
 
 .container-login {
 	width: 100%;
@@ -43,31 +46,14 @@
     box-shadow: 4px 7px 14px 4px #575757;
 }
 
-/*.login100-pic {
-	width: 100px;
-	height: 100px;
-	margin-left: 66px;
+.wrap-login.has-employee {
+	height: 1050px;
 }
-
-.login100-pic img {
-	max-width: 100%;
-}*/
 
 .login-form {
     position: relative;
     top: -3em;
 }
-
-/*.login100-form-title {
-	font-family: inherit;
-	font-size: 24px;
-	color: #f9f9f9;
-	line-height: 1.2;
-	text-align: center;
-	width: 100%;
-	display: block;
-	padding-bottom: 54px;
-}*/
 
 .wrap-input {
 	position: relative;
@@ -89,10 +75,6 @@
 	padding: 0 30px 0 68px;
 }
 
-
-/*------------------------------------------------------------------
-[ Focus ]*/
-
 .focus-input {
 	display: block;
 	position: absolute;
@@ -100,10 +82,10 @@
 	bottom: 0;
 	left: 1em;
 	z-index: -1;
-	width: 94%;
+	width: 94.5%;
 	height: 100%;
 	box-shadow: 0px 0px 0px 0px;
-	color: #0b96e8
+	color: #0C496Bc9
 }
 
 .input:focus+.focus-input {
@@ -113,14 +95,14 @@
 
 @-webkit-keyframes anim-shadow {
 	to {
-		box-shadow: 0px 0px 70px 25px;
+		box-shadow: 0px 0px 10px 5px;
 		opacity: 0;
 	}
 }
 
 @keyframes anim-shadow {
 	to {
-		box-shadow: 0px 0px 70px 25px;
+		box-shadow: 0px 0px 10px 5px;
 		opacity: 0;
 	}
 }
@@ -153,147 +135,30 @@
 	padding-left: 28px;
 }
 
-
-/*------------------------------------------------------------------
-[ Button ]*/
-
-.container-login100-form-btn {
-	width: 100%;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding-top: 20px;
-}
-
-.login100-form-btn {
-	font-family: inherit;
-	font-size: 15px;
-	line-height: 1.5;
-	color: #fff;
-	text-transform: uppercase;
+.login-form-btn {
 	width: 100%;
 	height: 50px;
-	border-radius: 25px;
-	background: #237d92;
-	display: -webkit-box;
-	display: -webkit-flex;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 0 25px;
+    background: #0C496Bc9;
+    border-radius: 10px;
+    color: #fff;
+	text-transform: uppercase;
 	-webkit-transition: all 0.4s;
 	-o-transition: all 0.4s;
 	-moz-transition: all 0.4s;
 	transition: all 0.4s;
 }
 
-.login100-form-btn:hover {
-	background: #333333;
+.login-form-btn:hover {
+	color: #DAA520;
+    border: 1px solid #DAA520;
+    box-shadow: 1px 2px 4px 2px #CCC;
 }
 
-
-/*------------------------------------------------------------------
-[ Responsive ]*/
-
-@media (max-width: 992px) {
-	.wrap-login100 {
-		padding: 177px 90px 33px 85px;
-	}
-	.login100-pic {
-		width: 35%;
-	}
-	.login100-form {
-		width: 50%;
-	}
+.sub-link:focus,
+.sub-link:hover {
+    color: #DAA520;
+    text-decoration: underline dashed;
 }
-
-@media (max-width: 768px) {
-	.wrap-login100 {
-		padding: 100px 80px 33px 80px;
-	}
-	.login100-pic {
-		display: none;
-	}
-	.login100-form {
-		width: 100%;
-	}
-}
-
-@media (max-width: 576px) {
-	.wrap-login100 {
-		padding: 100px 15px 33px 15px;
-	}
-}
-
-.validate-input {
-	position: relative;
-}
-
-.alert-validate::before {
-	content: attr(data-validate);
-	position: absolute;
-	max-width: 70%;
-	background-color: white;
-	border: 1px solid #c80000;
-	border-radius: 13px;
-	padding: 4px 25px 4px 10px;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-	transform: translateY(-50%);
-	right: 8px;
-	pointer-events: none;
-	font-family: inherit;
-	color: #c80000;
-	font-size: 13px;
-	line-height: 1.4;
-	text-align: left;
-	visibility: hidden;
-	opacity: 0;
-	-webkit-transition: opacity 0.4s;
-	-o-transition: opacity 0.4s;
-	-moz-transition: opacity 0.4s;
-	transition: opacity 0.4s;
-}
-
-.alert-validate::after {
-	content: "\f06a";
-	font-family: FontAwesome;
-	display: block;
-	position: absolute;
-	color: #c80000;
-	font-size: 15px;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-	transform: translateY(-50%);
-	right: 13px;
-}
-
-.alert-validate:hover:before {
-	visibility: visible;
-	opacity: 1;
-}
-
-@media (max-width: 992px) {
-	.alert-validate::before {
-		visibility: visible;
-		opacity: 1;
-	}
-}
-
-
-/*-----------------------CSS DO SWITCH TOGGLE (LOGIN)------------------------------*/
 
 .switch {
 	position: relative;
@@ -350,9 +215,13 @@
 	transition: .4s;
 }
 
-/*input:checked+.slider {
-	background-color: #2196F3;
-}*/
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+}
 
 input:focus+.slider {
 	box-shadow: 0 0 1px #2196F3;
@@ -373,14 +242,3 @@ input:checked+.slider:before {
 .active-switch .switch-person-title {
     color: #DAA520;
 }
-
-/* Rounded sliders */
-
-.slider.round {
-	border-radius: 34px;
-}
-
-.slider.round:before {
-	border-radius: 50%;
-}
-
