--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ 
-     ViewBag.Title = "Login";
-     Layout = "~/Views/Shared/LoginLayout.cshtml";
+     ViewBag.Title ="Login";
+     Layout ="~/Views/Shared/LoginLayout.cshtml";
 }
 
 <div class="row col-12 justify-content-center text-center mt-4">
@@ -78,7 +78,7 @@
         </label>
 
         <!--- Funcionario --->
-        <div class="col-5 text-center js-tilt" data-tilt>
+        <div class="col-5 text-center js-tilt">
             <button id="btnFuncionario" 
                     class="col-9 switch-wrapper p-3">
                 <img src="/Content/images/comprador.png" />
@@ -88,13 +88,13 @@
     </div>
 </div>
 
-<!--- Formulário de Login --->
-<form class="row login-form justify-content-center p-5" >
+<!--- Formulario de Login --->
+<form class="row login-form justify-content-center p-5" method="post" action="../Login/Login">
 
     <!--- CPF --->
-    <div id="inputCpf" class="col-10 wrap-input validate-input"
+    <div id="inputCpf" class="col-10 wrap-input"
          data-validate="Valid email is required: ex@abc.xyz">
-        <input class="input" type="text" name="email" placeholder="CPF">
+        <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
         <span class="focus-input"></span>
         <span class="symbol-input">
             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -102,9 +102,9 @@
     </div>
 
     <!--- CNPJ --->
-    <div id="inputCnpj" class="col-10 wrap-input validate-input"
+    <div id="inputCnpj" class="col-10 wrap-input"
          data-validate="Valid email is required: ex@abc.xyz">
-        <input class="input" type="text" name="email" placeholder="CNPJ">
+        <input class="input" type="text" maxlength="14" name="cnpj" placeholder="CNPJ">
         <span class="focus-input"></span>
         <span class="symbol-input">
             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -112,9 +112,9 @@
     </div>
 
     <!--- Codigo Funcionario --->
-    <div id="inputFuncionario" class="col-10 wrap-input validate-input mt-3"
+    <div id="inputFuncionario" class="col-10 wrap-input  mt-3"
          data-validate="Valid email is required: ex@abc.xyz">
-        <input class="input" type="text" name="email" placeholder="Código do Funcionário">
+        <input class="input" type="text" name="codigoFuncionario" placeholder="Código do Funcionário">
         <span class="focus-input"></span>
         <span class="symbol-input">
             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -122,36 +122,39 @@
     </div>
 
     <!--- Senha --->
-    <div class="col-10 wrap-input validate-input mt-3" 
+    <div class="col-10 wrap-input  mt-3" 
          data-validate="Password is required">
-        <input class="input" type="password" name="pass" placeholder="Senha">
+        <input class="input" type="password" name="senha" placeholder="Senha">
         <span class="focus-input"></span>
         <span class="symbol-input">
             <i class="fa fa-lock" aria-hidden="true"></i>
         </span>
     </div>
 
-    <input id="inputHidden" type="text" name="inputHidden" placeholder="Input">
+    <input id="inputHidden" type="text" name="inputHidden" hidden>
 
-    @*<div class="container-login100-form-btn">
-        <button class="login100-form-btn">
-            Login
-        </button>
+    <div class="row col-12 login-form justify-content-center p-5 mt-5 ml-3 mr-3">
+        <div class="col-6 mt-3">
+            <!--- Esquci minha Senha --->
+            <div class="text-left">
+                <a class="sub-link" href="#">
+                    Esqueceu sua senha?
+                </a>
+            </div>
+
+            <!--- Criar Conta --->
+            <div class="text-left pt-3">
+                <a class="sub-link" href="#">
+                    Criar conta
+                </a>
+            </div>
+        </div>
+
+        <!--- Botao Entrar --->
+        <div class="col-6 justify-content-center align-self-center mt-2">
+            <button class="login-form-btn mt-2">
+                Entrar
+            </button>
+        </div>
     </div>
-
-    <div class="text-center p-t-12">
-        <span class="txt1">
-            Esqueceu
-        </span>
-        <a class="txt2" href="#">
-            Usuário / Senha ?
-        </a>
-    </div>
-
-    <div class="text-center p-t-136">
-        <a class="txt2" href="#">
-            Criar conta
-            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-        </a>
-    </div>*@
 </form>
