--- a/SupplierRanking/Content/css/login.css
+++ b/SupplierRanking/Content/css/login.css
@@ -63,16 +63,16 @@
 }
 
 .input {
-	font-family: inherit;
-	font-size: 15px;
-	line-height: 1.5;
-	color: #666666;
 	display: block;
 	width: 100%;
-	background: #e6e6e6;
+	background: #E6E6E6;
 	height: 50px;
 	border-radius: 10px;
 	padding: 0 30px 0 68px;
+    font-family: inherit;
+	font-size: 15px;
+	color: #666666;
+    line-height: 1.5;
 }
 
 .focus-input {
