--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -1,55 +1,203 @@
 ﻿
 @{
-    ViewBag.Title = "CadastroPessoaFisica";
-    Layout = "~/Views/Shared/LoginLayout.cshtml";
+    ViewBag.Title = "Cadastro";
+    Layout = "~/Views/Shared/_LayoutCadastro.cshtml";
 }
 
+<div class="row col-12 justify-content-center text-center mt-4">
+    <h2>Crie sua Conta</h2>
+</div>
 
-<div class="container-login100">
+<div class="row text-center pt-5">
     
-    <div class="wrap-login100" style="background-color: white;">
+    <div class="col-7 align-items-center">
+        Selecione o seu tipo de usuário:
 
-        <h2>CadastroPessoaFisica</h2>
-
-        <form action="../Comprador/CadastroPessoaFisica" method="post" class="login100-form validate-form">
-            <p>@ViewBag.Message</p>
-            <!--- Campos do Comprador Fisico -->
-            <div >
-                <input type="text" name="cpf" placeholder="CPF">
-                <input type="text" name="nome" placeholder="Nome">
-                <input type="text" name="sobrenome" placeholder="Sobrenome">
-                <input type="text" name="email" placeholder="Email">
-                <input type="text" name="senha" placeholder="Senha">
-                <input type="text" name="confirmarSenha" placeholder="Confirmar Senha">
-                <br /> <br />
-                <input type="text" name="uf" placeholder="UF">
-                <br /> <br />
-                <input type="text" name="telefone" placeholder="(00) 0000-0000">
-                <input type="text" name="celular" placeholder="(00) 00000-0000">
-                <br /> <br />
-                <fieldset>
-                    <legend>Escolha as categorias do seu interesse:</legend>
-                    <div>
-                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
-                        <label for="fastfood">Fastfood</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
-                        <label for="esquadrias">Esquadrias</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="pesca" name="pesca" value="pesca" />
-                        <label for="pesca">Pesca</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
-                        <label for="agropecuaria">Agropecuária</label>
-                    </div>
-                </fieldset>
+        <div class="row align-items-center justify-content-center mt-4">
+            <!--- Comprador --->
+            <div class="col-5 js-tilt" data-tilt>
+                <button id="btnComprador" class="col-9 switch-wrapper p-3">
+                    <img src="/Content/images/comprador.png" />
+                    <h6 class="switch-person-title p-2">Comprador</h6>
+                </button>
             </div>
 
-            <br /> <br />
-            <button id="btnCadastrar">Cadastrar</button>
-        </form>
+            <!--- Switch --->
+            <label class="switch m-3">
+                <input id="switchFornecedor" type="checkbox">
+                <span class="slider slider-fornecedor round unchecked"></span>
+            </label>
+
+            <!--- Fornecedor --->
+            <div class="col-5 js-tilt" data-tilt>
+                <button id="btnFornecedor" class="col-9 switch-wrapper p-3">
+                    <img src="/Content/images/fornecedor.png" />
+                    <h6 class="switch-person-title p-2">Fornecedor</h6>
+                </button>
+            </div>
+        </div>
+
+        <!--- Pessoa Fisica & Pessoa Juridica --->
+        <div id="wrapperFisicaJuridica"
+             class="mt-4 pt-4">
+            Informe o seu tipo de perfil:
+
+            <div class="row align-items-center justify-content-center mt-4">
+                <!--- Pessoa Fisica --->
+                <div class="col-5 js-tilt">
+                    <button id="btnFisica" class="col-9 switch-wrapper p-3">
+                        <img src="/Content/images/comprador.png" />
+                        <h6 class="switch-person-title p-2">Física</h6>
+                    </button>
+                </div>
+
+                <!--- Switch --->
+                <label class="switch m-3">
+                    <input id="switchJuridica" type="checkbox">
+                    <span class="slider slider-juridica round unchecked"></span>
+                </label>
+
+                <!--- Pessoa Juridica --->
+                <div class="col-5 js-tilt">
+                    <button id="btnJuridica" class="col-9 switch-wrapper p-3">
+                        <img src="/Content/images/fornecedor.png" />
+                        <h6 class="switch-person-title p-2">Jurídica</h6>
+                    </button>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+    @*<p>@ViewBag.Message</p>*@
+
+
+    <form class="col-5 cadastro-form justify-content-center mt-4 pt-4" method="post" action="../Comprador/CadastroPessoaFisica">
+        
+        <!--- CPF --->
+        <div class="col-11 wrap-input">
+            <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- Nome --->
+        <div class="col-11 wrap-input">
+            <input class="input" type="text" name="nome" placeholder="Nome">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- Sobrenome --->
+        <div class="col-11 wrap-input">
+            <input class="input" type="text" name="sobrenome" placeholder="Sobrenome">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- Email --->
+        <div class="col-11 wrap-input">
+            <input class="input" type="email" name="email" placeholder="Email">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- Senha --->
+        <div class="col-11 wrap-input">
+            <input class="input" type="password" name="senha" placeholder="Senha">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- Confirmar Senha --->
+        <div class="col-11 wrap-input">
+            <input class="input" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- UF --->
+        <div class="col-11 wrap-input">
+            Informe seu Estado:
+
+            <select name="uf" class="states text-center">
+                <option>UF</option>
+                <option value="AC">AC</option>
+                <option value="AL">AL</option>
+                <option value="AP">AP</option>
+                <option value="AM">AM</option>
+                <option value="BA">BA</option>
+                <option value="CE">CE</option>
+                <option value="DF">DF</option>
+                <option value="ES">ES</option>
+                <option value="GO">GO</option>
+                <option value="MA">MA</option>
+                <option value="MT">MT</option>
+                <option value="MS">MS</option>
+                <option value="MG">MG</option>
+                <option value="PA">PA</option>
+                <option value="PB">PB</option>
+                <option value="PR">PR</option>
+                <option value="PE">PE</option>
+                <option value="PI">PI</option>
+                <option value="RJ">RJ</option>
+                <option value="RN">RN</option>
+                <option value="RS">RS</option>
+                <option value="RO">RO</option>
+                <option value="RR">RR</option>
+                <option value="SC">SC</option>
+                <option value="SP">SP</option>
+                <option value="SE">SE</option>
+                <option value="TO">TO</option>
+            </select>
+
+            <input class="input" type="text" name="uf" placeholder="UF">
+            <span class="focus-input"></span>
+            <span class="symbol-input">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </span>
+        </div>
+
+        <!--- Campos do Comprador Fisico -->
+        @*<div>
+            <br /> <br />
+            <input type="text" name="telefone" placeholder="(00) 0000-0000">
+            <input type="text" name="celular" placeholder="(00) 00000-0000">
+            <br /> <br />
+            <fieldset>
+                <legend>Escolha as categorias do seu interesse:</legend>
+                <div>
+                    <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
+                    <label for="fastfood">Fastfood</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
+                    <label for="esquadrias">Esquadrias</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="pesca" name="pesca" value="pesca" />
+                    <label for="pesca">Pesca</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
+                    <label for="agropecuaria">Agropecuária</label>
+                </div>
+            </fieldset>
+        </div>*@
+
+        <br /> <br />
+        <button id="btnCadastrar">Cadastrar</button>
+    </form>
 </div>
