--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ 
      ViewBag.Title = "Login";
-     Layout = "~/Views/Shared/LoginLayout.cshtml";
+     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <div class="row col-12 justify-content-center text-center mt-4">
@@ -92,8 +92,7 @@
 <form class="row login-form justify-content-center p-5" method="post" action="../Login/Login">
 
     <!--- CPF --->
-    <div id="inputCpf" class="col-10 wrap-input"
-         data-validate="Valid email is required: ex@abc.xyz">
+    <div id="inputCpf" class="col-10 wrap-input">
         <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -102,8 +101,7 @@
     </div>
 
     <!--- CNPJ --->
-    <div id="inputCnpj" class="col-10 wrap-input"
-         data-validate="Valid email is required: ex@abc.xyz">
+    <div id="inputCnpj" class="col-10 wrap-input">
         <input class="input" type="text" maxlength="14" name="cnpj" placeholder="CNPJ">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -112,8 +110,7 @@
     </div>
 
     <!--- Codigo Funcionario --->
-    <div id="inputFuncionario" class="col-10 wrap-input  mt-3"
-         data-validate="Valid email is required: ex@abc.xyz">
+    <div id="inputFuncionario" class="col-10 wrap-input mt-3">
         <input class="input" type="text" name="codigoFuncionario" placeholder="Código do Funcionário">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -122,8 +119,7 @@
     </div>
 
     <!--- Senha --->
-    <div class="col-10 wrap-input  mt-3" 
-         data-validate="Password is required">
+    <div class="col-10 wrap-input  mt-3">
         <input class="input" type="password" name="senha" placeholder="Senha">
         <span class="focus-input"></span>
         <span class="symbol-input">
