--- a/SupplierRanking/Content/css/login.css
+++ b/SupplierRanking/Content/css/login.css
@@ -136,16 +136,16 @@
 }
 
 .login-form-btn {
-	width: 100%;
-	height: 50px;
+    width: 15.6em;
+    height: 50px;
     background: #0C496Bc9;
     border-radius: 10px;
     color: #fff;
-	text-transform: uppercase;
-	-webkit-transition: all 0.4s;
-	-o-transition: all 0.4s;
-	-moz-transition: all 0.4s;
-	transition: all 0.4s;
+    text-transform: uppercase;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
 }
 
 .login-form-btn:hover {
