--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -16,7 +16,7 @@
         <div class="row align-items-center justify-content-center mt-4">
             <!--- Comprador --->
             <div class="col-5 js-tilt" data-tilt>
-                <button id="btnComprador" class="col-9 switch-wrapper p-3">
+                <button id="btnComprador" class="col-9 switch-wrapper active-switch p-3">
                     <img src="/Content/images/comprador.png" />
                     <h6 class="switch-person-title p-2">Comprador</h6>
                 </button>
@@ -25,15 +25,17 @@
             <!--- Switch --->
             <label class="switch m-3">
                 <input id="switchFornecedor" type="checkbox">
-                <span class="slider slider-fornecedor round unchecked"></span>
+                <span class="slider slider-fornecedor round"></span>
             </label>
 
             <!--- Fornecedor --->
             <div class="col-5 js-tilt" data-tilt>
-                <button id="btnFornecedor" class="col-9 switch-wrapper p-3">
-                    <img src="/Content/images/fornecedor.png" />
-                    <h6 class="switch-person-title p-2">Fornecedor</h6>
-                </button>
+                <a class="d-flex justify-content-center" href="/Fornecedor/CadastroFornecedor">
+                    <div id="btnFornecedor" class="col-9 switch-wrapper p-3">
+                        <img src="/Content/images/fornecedor.png" />
+                        <h6 class="switch-person-title p-2">Fornecedor</h6>
+                    </div>
+                </a>
             </div>
         </div>
 
@@ -45,159 +47,211 @@
             <div class="row align-items-center justify-content-center mt-4">
                 <!--- Pessoa Fisica --->
                 <div class="col-5 js-tilt">
-                    <button id="btnFisica" class="col-9 switch-wrapper p-3">
-                        <img src="/Content/images/comprador.png" />
-                        <h6 class="switch-person-title p-2">Física</h6>
-                    </button>
+                    <a class="d-flex justify-content-center" href="/Comprador/CadastroPessoaFisica">
+                        <div id="btnFisica" class="col-9 switch-wrapper active-switch p-3">
+                            <img src="/Content/images/comprador.png" />
+                            <h6 class="switch-person-title p-2">Física</h6>
+                        </div>
+                    </a>
                 </div>
 
                 <!--- Switch --->
                 <label class="switch m-3">
                     <input id="switchJuridica" type="checkbox">
-                    <span class="slider slider-juridica round unchecked"></span>
+                    <span class="slider slider-juridica round"></span>
                 </label>
 
                 <!--- Pessoa Juridica --->
                 <div class="col-5 js-tilt">
-                    <button id="btnJuridica" class="col-9 switch-wrapper p-3">
-                        <img src="/Content/images/fornecedor.png" />
-                        <h6 class="switch-person-title p-2">Jurídica</h6>
-                    </button>
+                    <a class="d-flex justify-content-center" href="/Comprador/CadastroPessoaJuridica">
+                        <div id="btnJuridica" class="col-9 switch-wrapper p-3">
+                            <img src="/Content/images/fornecedor.png" />
+                            <h6 class="switch-person-title p-2">Jurídica</h6>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-
     </div>
 
     @*<p>@ViewBag.Message</p>*@
 
 
-    <form class="col-5 cadastro-form justify-content-center mt-4 pt-4" method="post" action="../Comprador/CadastroPessoaFisica">
+    <form class="col-12 cadastro-form d-flex justify-content-end mt-4 pt-4 pr-2 pl-0"
+          method="post" action="../Comprador/CadastroPessoaFisica" onsubmit="event.preventDefault();">
+
+        <div class="col-5 form-first-part justify-content-center">
+
+            <!--- CPF --->
+            <div class="col-11 wrap-input p-0">
+                <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
+                <span class="focus-input"></span>
+                <span class="symbol-input">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <!--- Nome --->
+            <div class="col-11 wrap-input p-0">
+                <input class="input" type="text" name="nome" placeholder="Nome">
+                <span class="focus-input"></span>
+                <span class="symbol-input">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <!--- Sobrenome --->
+            <div class="col-11 wrap-input p-0">
+                <input class="input" type="text" name="sobrenome" placeholder="Sobrenome">
+                <span class="focus-input"></span>
+                <span class="symbol-input">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <!--- Email --->
+            <div class="col-11 wrap-input p-0">
+                <input class="input" type="email" name="email" placeholder="Email">
+                <span class="focus-input"></span>
+                <span class="symbol-input">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <div class="col-11 row p-0 align-items-center justify-content-between">
+                <!--- Senha --->
+                <div class="col-10 p-0">
+                    <div class="wrap-input">
+                        <input class="input" type="password" name="senha" placeholder="Senha">
+                        <span class="focus-input"></span>
+                        <span class="symbol-input">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <!--- Confirmar Senha --->
+                    <div class="wrap-input">
+                        <input class="input" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
+                        <span class="focus-input"></span>
+                        <span class="symbol-input">
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center">
+                    <button id="btnSenha">
+                        <img src="/Content/images/comprador.png" />
+                    </button>
+                </div>
+            </div>
+
+            <!--- UF --->
+            <div class="col-11 row p-0 align-items-center justify-content-between">
+                <div class="col-8 p-0">
+                    Escolha o seu Estado ao lado:
+                </div>
+
+                <select name="uf" class="states text-center">
+                    <option disabled>UF</option>
+                    <option value="AC">AC</option>
+                    <option value="AL">AL</option>
+                    <option value="AP">AP</option>
+                    <option value="AM">AM</option>
+                    <option value="BA">BA</option>
+                    <option value="CE">CE</option>
+                    <option value="DF">DF</option>
+                    <option value="ES">ES</option>
+                    <option value="GO">GO</option>
+                    <option value="MA">MA</option>
+                    <option value="MT">MT</option>
+                    <option value="MS">MS</option>
+                    <option value="MG">MG</option>
+                    <option value="PA">PA</option>
+                    <option value="PB">PB</option>
+                    <option value="PR">PR</option>
+                    <option value="PE">PE</option>
+                    <option value="PI">PI</option>
+                    <option value="RJ">RJ</option>
+                    <option value="RN">RN</option>
+                    <option value="RS">RS</option>
+                    <option value="RO">RO</option>
+                    <option value="RR">RR</option>
+                    <option value="SC">SC</option>
+                    <option value="SP">SP</option>
+                    <option value="SE">SE</option>
+                    <option value="TO">TO</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="row col-12 form-second-part justify-content-between pl-5 pr-5">
+            <!--- Telefone --->
+            <div class="col-5 wrap-input">
+                <input class="input" type="text" name="telefone" maxlength="10" placeholder="(00) 0000-0000">
+                <span class="focus-input"></span>
+                <span class="symbol-input">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <!--- Celular --->
+            <div class="col-5 wrap-input pl-4 pr-0 mr-2">
+                <input class="input" type="text" name="celular" placeholder="(00) 00000-0000">
+                <span class="focus-input"></span>
+                <span class="symbol-input">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </span>
+            </div>
+
+            <div class="row col-12 align-items-center mt-5 pt-4 pl-2 pr-2">
+                <!--- Voltar para Login --->
+                <div class="col-6 text-left">
+                    <a class="sub-link" href="/Login/Login">
+                        Login
+                    </a>
+                </div>
+
+                <!--- Botao Proximo --->
+                <div class="col-6 d-flex align-self-center justify-content-end pr-0">
+                    <button class="login-form-btn mt-2">
+                        Próximo
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row col-12 form-second-part justify-content-between pl-5 pr-5">
         
-        <!--- CPF --->
-        <div class="col-11 wrap-input">
-            <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
         </div>
 
-        <!--- Nome --->
-        <div class="col-11 wrap-input">
-            <input class="input" type="text" name="nome" placeholder="Nome">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-        </div>
+            <!--- Campos do Comprador Fisico -->
+            @*<div>
+                <br /> <br />
+                <input type="text" name="telefone" placeholder="(00) 0000-0000">
+                <input type="text" name="celular" placeholder="(00) 00000-0000">
+                <br /> <br />
+                <fieldset>
+                    <legend>Escolha as categorias do seu interesse:</legend>
+                    <div>
+                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
+                        <label for="fastfood">Fastfood</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
+                        <label for="esquadrias">Esquadrias</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="pesca" name="pesca" value="pesca" />
+                        <label for="pesca">Pesca</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
+                        <label for="agropecuaria">Agropecuária</label>
+                    </div>
+                </fieldset>
+            </div>*@
 
-        <!--- Sobrenome --->
-        <div class="col-11 wrap-input">
-            <input class="input" type="text" name="sobrenome" placeholder="Sobrenome">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-        </div>
-
-        <!--- Email --->
-        <div class="col-11 wrap-input">
-            <input class="input" type="email" name="email" placeholder="Email">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-        </div>
-
-        <!--- Senha --->
-        <div class="col-11 wrap-input">
-            <input class="input" type="password" name="senha" placeholder="Senha">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-        </div>
-
-        <!--- Confirmar Senha --->
-        <div class="col-11 wrap-input">
-            <input class="input" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-        </div>
-
-        <!--- UF --->
-        <div class="col-11 wrap-input">
-            Informe seu Estado:
-
-            <select name="uf" class="states text-center">
-                <option>UF</option>
-                <option value="AC">AC</option>
-                <option value="AL">AL</option>
-                <option value="AP">AP</option>
-                <option value="AM">AM</option>
-                <option value="BA">BA</option>
-                <option value="CE">CE</option>
-                <option value="DF">DF</option>
-                <option value="ES">ES</option>
-                <option value="GO">GO</option>
-                <option value="MA">MA</option>
-                <option value="MT">MT</option>
-                <option value="MS">MS</option>
-                <option value="MG">MG</option>
-                <option value="PA">PA</option>
-                <option value="PB">PB</option>
-                <option value="PR">PR</option>
-                <option value="PE">PE</option>
-                <option value="PI">PI</option>
-                <option value="RJ">RJ</option>
-                <option value="RN">RN</option>
-                <option value="RS">RS</option>
-                <option value="RO">RO</option>
-                <option value="RR">RR</option>
-                <option value="SC">SC</option>
-                <option value="SP">SP</option>
-                <option value="SE">SE</option>
-                <option value="TO">TO</option>
-            </select>
-
-            <input class="input" type="text" name="uf" placeholder="UF">
-            <span class="focus-input"></span>
-            <span class="symbol-input">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-            </span>
-        </div>
-
-        <!--- Campos do Comprador Fisico -->
-        @*<div>
-            <br /> <br />
-            <input type="text" name="telefone" placeholder="(00) 0000-0000">
-            <input type="text" name="celular" placeholder="(00) 00000-0000">
-            <br /> <br />
-            <fieldset>
-                <legend>Escolha as categorias do seu interesse:</legend>
-                <div>
-                    <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
-                    <label for="fastfood">Fastfood</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
-                    <label for="esquadrias">Esquadrias</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="pesca" name="pesca" value="pesca" />
-                    <label for="pesca">Pesca</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
-                    <label for="agropecuaria">Agropecuária</label>
-                </div>
-            </fieldset>
-        </div>*@
-
-        <br /> <br />
-        <button id="btnCadastrar">Cadastrar</button>
+            @*<br /> <br />
+            <button id="btnCadastrar">Cadastrar</button>*@
     </form>
 </div>
