--- a/SupplierRanking/Views/Login/Cadastro.cshtml
+++ b/SupplierRanking/Views/Login/Cadastro.cshtml
@@ -1,136 +1,76 @@
-﻿@{
+﻿
+@{
     ViewBag.Title = "Cadastro";
-    Layout = "~/Views/Shared/LoginLayout.cshtml";
+    Layout = "~/Views/Shared/_LayoutCadastro.cshtml";
 }
 
-<div class="container-login100">
-    <div class="wrap-login100" style="background-color: white;">
+<div class="row col-12 justify-content-center text-center mt-4">
+    <h2>Crie sua Conta</h2>
+</div>
 
-        <form method="post" class="login100-form validate-form">
-            <!--- Campos do Comprador Fisico -->
-            <div id="wrapperCompradorFisico">
-                <input type="text" name="cpf" placeholder="CPF">
-                <input type="text" name="nome" placeholder="Nome">
-                <input type="text" name="sobrenome" placeholder="Sobrenome">
-                <input type="text" name="email" placeholder="Email">
-                <input type="text" name="senha" placeholder="Senha">
-                <input type="text" name="confirmarSenha" placeholder="Confirmar Senha">
-                <br /> <br />
-                <input type="text" name="uf" placeholder="UF">
-                <br /> <br />
-                <input type="text" name="tel" placeholder="(00) 0000-0000">
-                <input type="text" name="cel" placeholder="(00) 00000-0000">
-                <br /> <br />
-                <fieldset>
-                    <legend>Escolha as categorias do seu interesse:</legend>
-                    <div>
-                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
-                        <label for="fastfood">Fastfood</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
-                        <label for="esquadrias">Esquadrias</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="pesca" name="pesca" value="pesca" />
-                        <label for="pesca">Pesca</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
-                        <label for="agropecuaria">Agropecuária</label>
-                    </div>
-                </fieldset>
+<div class="row text-center pt-5">
+
+    <div class="col-7 align-items-center">
+        Selecione o seu tipo de usuário:
+
+        <div class="row align-items-center justify-content-center mt-4">
+            <!--- Comprador --->
+            <div class="col-5 js-tilt" data-tilt>
+                <button id="btnComprador" class="col-9 switch-wrapper p-3">
+                    <img src="/Content/images/comprador.png" />
+                    <h6 class="switch-person-title p-2">Comprador</h6>
+                </button>
             </div>
 
-            <!--- Campos do Comprador Juridico -->
-            <div id="wrapperCompradorJuridico">
-                <input type="text" name="cnpj" placeholder="CNPJ">
-                <input type="text" name="nomeEmpresa" placeholder="Nome da Empresa">
-                <input type="text" name="email" placeholder="Email">
-                <input type="text" name="senha" placeholder="Senha">
-                <input type="text" name="confirmarSenha" placeholder="Confirmar Senha">
-                <br /> <br />
-                <input type="text" name="uf" placeholder="UF">
-                <br /> <br />
-                <input type="text" name="tel" placeholder="(00) 0000-0000">
-                <input type="text" name="cel" placeholder="(00) 00000-0000">
-                <br /> <br />
-                <fieldset>
-                    <legend>Escolha as categorias do seu interesse:</legend>
-                    <div>
-                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
-                        <label for="fastfood">Fastfood</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
-                        <label for="esquadrias">Esquadrias</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="pesca" name="pesca" value="pesca" />
-                        <label for="pesca">Pesca</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
-                        <label for="agropecuaria">Agropecuária</label>
-                    </div>
-                </fieldset>
-            </div>
+            <!--- Switch --->
+            <label class="switch m-3">
+                <input id="switchFornecedor" type="checkbox">
+                <span class="slider slider-fornecedor round unchecked"></span>
+            </label>
 
-            <!--- Campos do Fornecedor -->
-            <div id="wrapperFornecedor">
-                <label for="imagePerfil" style="border: 1px solid; background-color: gainsboro; padding: .5em; font-size: 12px; cursor: pointer;">Image de Perfil</label>
-                <input type="file" accept="image/*" id="imagePerfil" name="imagePerfil" style="display: none">
-                <br /> <br />
-                <input type="text" name="cnpj" placeholder="CNPJ">
-                <input type="text" name="nomeEmpresa" placeholder="Nome da Empresa">
-                <input type="text" name="email" placeholder="Email">
-                <input type="text" name="senha" placeholder="Senha">
-                <input type="text" name="confirmarSenha" placeholder="Confirmar Senha">
-                <br /> <br />
-                <input type="text" name="cep" placeholder="CEP">
-                <input type="text" name="endereco" placeholder="Endereço">
-                <input type="text" name="bairro" placeholder="Bairro">
-                <input type="text" name="cidade" placeholder="Cidade">
-                <input type="text" name="uf" placeholder="UF">
-                <br /> <br />
-                <input type="text" name="tel" placeholder="(00) 0000-0000">
-                <input type="text" name="cel" placeholder="(00) 00000-0000">
-                <br /> <br />
-                <fieldset>
-                    <legend>Escolha as categorias do seu interesse:</legend>
-                    <div>
-                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
-                        <label for="fastfood">Fastfood</label>
+            <!--- Fornecedor --->
+            <div class="col-5 js-tilt" data-tilt>
+                <a class="d-flex justify-content-center" href="/Fornecedor/CadastroFornecedor">
+                    <div id="btnFornecedor" class="col-9 switch-wrapper p-3">
+                        <img src="/Content/images/fornecedor.png" />
+                        <h6 class="switch-person-title p-2">Fornecedor</h6>
                     </div>
-                    <div>
-                        <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
-                        <label for="esquadrias">Esquadrias</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="pesca" name="pesca" value="pesca" />
-                        <label for="pesca">Pesca</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
-                        <label for="agropecuaria">Agropecuária</label>
-                    </div>
-                </fieldset>
-                <br /> <br />
-                <input type="text" name="plano" placeholder="Plano">
+                </a>
             </div>
+        </div>
 
-            <!--- Campos do Funcionario -->
-            <div id="wrapperFuncionario">
-                <input type="text" name="cnpj" placeholder="CNPJ">
-                <br /> <br />
-                <input type="text" name="codigo" placeholder="Codigo" readonly>
-                <input type="text" name="nome" placeholder="Nome">
-                <br /> <br />
-                <input type="text" name="senha" placeholder="Senha">
-                <input type="text" name="confirmarSenha" placeholder="Confirmar Senha">
+        <!--- Pessoa Fisica & Pessoa Juridica --->
+        <div id="wrapperFisicaJuridica"
+             class="mt-4 pt-4">
+            Informe o seu tipo de perfil:
+
+            <div class="row align-items-center justify-content-center mt-4">
+                <!--- Pessoa Fisica --->
+                <div class="col-5 js-tilt">
+                    <a class="d-flex justify-content-center" href="/Comprador/CadastroPessoaFisica">
+                        <div id="btnFisica" class="col-9 switch-wrapper p-3">
+                            <img src="/Content/images/comprador.png" />
+                            <h6 class="switch-person-title p-2">Física</h6>
+                        </div>
+                    </a>
+                </div>
+
+                <!--- Switch --->
+                <label class="switch m-3">
+                    <input id="switchJuridica" type="checkbox">
+                    <span class="slider slider-juridica round unchecked"></span>
+                </label>
+
+                <!--- Pessoa Juridica --->
+                <div class="col-5 js-tilt">
+                    <a class="d-flex justify-content-center" href="/Comprador/CadastroPessoaJuridica">
+                        <div id="btnJuridica" class="col-9 switch-wrapper p-3">
+                            <img src="/Content/images/fornecedor.png" />
+                            <h6 class="switch-person-title p-2">Jurídica</h6>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <br /> <br />
-            <button id="btnCadastrar">Cadastrar</button>
-        </form>
+        </div>
     </div>
 </div>
