--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -92,7 +92,7 @@
 <form class="row login-form justify-content-center p-5" method="post" action="../Login/Login">
 
     <!--- CPF --->
-    <div id="inputCpf" class="col-10 wrap-input">
+    <div id="inputCpf" class="col-10 wrap-input pl-2">
         <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -101,7 +101,7 @@
     </div>
 
     <!--- CNPJ --->
-    <div id="inputCnpj" class="col-10 wrap-input">
+    <div id="inputCnpj" class="col-10 wrap-input pl-2">
         <input class="input" type="text" maxlength="14" name="cnpj" placeholder="CNPJ">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -110,7 +110,7 @@
     </div>
 
     <!--- Codigo Funcionario --->
-    <div id="inputFuncionario" class="col-10 wrap-input mt-3">
+    <div id="inputFuncionario" class="col-10 wrap-input pl-2 mt-3">
         <input class="input" type="text" name="codigoFuncionario" placeholder="Código do Funcionário">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -119,7 +119,7 @@
     </div>
 
     <!--- Senha --->
-    <div class="col-10 wrap-input  mt-3">
+    <div class="col-10 wrap-input pl-2  mt-3">
         <input class="input" type="password" name="senha" placeholder="Senha">
         <span class="focus-input"></span>
         <span class="symbol-input">
@@ -140,14 +140,14 @@
 
             <!--- Criar Conta --->
             <div class="text-left pt-3">
-                <a class="sub-link" href="#">
+                <a class="sub-link" href="/Login/Cadastro">
                     Criar conta
                 </a>
             </div>
         </div>
 
         <!--- Botao Entrar --->
-        <div class="col-6 justify-content-center align-self-center mt-2">
+        <div class="col-6 justify-content-center align-self-center mt-2 pl-0 pr-4">
             <button class="login-form-btn mt-2">
                 Entrar
             </button>
