--- a/SupplierRanking/Views/Login/Cadastro.cshtml
+++ b/SupplierRanking/Views/Login/Cadastro.cshtml
@@ -8,7 +8,7 @@
     <h2>Crie sua Conta</h2>
 </div>
 
-<div class="row text-center pt-5">
+<div class="row cadastro-login text-center pt-5">
 
     <div class="col-7 align-items-center">
         Selecione o seu tipo de usuário:
