--- a/SupplierRanking/Content/css/style_login.css
+++ b/SupplierRanking/Content/css/style_login.css
@@ -45,6 +45,26 @@ a:hover {
 	color: #0b96e8;
 }
 
+.fake-link {
+	font-size: 14px;
+	line-height: 1.7;
+	color: #666666;
+	margin: 0px;
+	transition: all 0.4s;
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+}
+
+.fake-link:focus {
+	outline: none !important;
+}
+
+.fake-link:hover {
+	text-decoration: none;
+	color: #0b96e8;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	margin: 0px;
 }
