--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -4,13 +4,13 @@
     Layout = "~/Views/Shared/_LayoutCadastro.cshtml";
 }
 
-<div class="row col-12 justify-content-center text-center mt-4">
+<div class="row col-12 form-title justify-content-center text-center mt-4">
     <h2>Crie sua Conta</h2>
 </div>
 
 <div class="row text-center pt-5">
     
-    <div class="col-7 align-items-center">
+    <div class="col-7 align-items-center wrap-options">
         Selecione o seu tipo de usuário:
 
         <div class="row align-items-center justify-content-center mt-4">
@@ -84,7 +84,7 @@
 
             <!--- CPF --->
             <div class="col-11 wrap-input p-0">
-                <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF">
+                <input class="input" type="text" maxlength="11" name="cpf" placeholder="CPF" data-mask="000.000.000-00" data-mask-sectionFocus="true" />
                 <span class="focus-input"></span>
                 <span class="symbol-input">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -119,10 +119,11 @@
             </div>
 
             <div class="col-11 row p-0 align-items-center justify-content-between">
-                <!--- Senha --->
+                <!--- Senha & Confirmar Senha --->
                 <div class="col-10 p-0">
+                    <!--- Senha --->
                     <div class="wrap-input">
-                        <input class="input" type="password" name="senha" placeholder="Senha">
+                        <input class="input input-senha" type="password" name="senha" placeholder="Senha">
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -131,13 +132,15 @@
 
                     <!--- Confirmar Senha --->
                     <div class="wrap-input">
-                        <input class="input" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
+                        <input class="input input-senha" type="password" name="confirmarSenha" placeholder="Confirmar Senha">
                         <span class="focus-input"></span>
                         <span class="symbol-input">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                         </span>
                     </div>
                 </div>
+
+                <!--- Visualizar Senha --->
                 <div class="d-flex align-items-center">
                     <button id="btnSenha">
                         <img src="/Content/images/comprador.png" />
@@ -187,7 +190,7 @@
         <div class="row col-12 form-second-part justify-content-between pl-5 pr-5">
             <!--- Telefone --->
             <div class="col-5 wrap-input">
-                <input class="input" type="text" name="telefone" maxlength="10" placeholder="(00) 0000-0000">
+                <input class="input" type="text" name="telefone" maxlength="10" placeholder="(00) 0000-0000" data-mask="(00) 0000-0000" data-mask-sectionFocus="true">
                 <span class="focus-input"></span>
                 <span class="symbol-input">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -196,14 +199,14 @@
 
             <!--- Celular --->
             <div class="col-5 wrap-input pl-4 pr-0 mr-2">
-                <input class="input" type="text" name="celular" placeholder="(00) 00000-0000">
+                <input class="input" type="text" name="celular" placeholder="(00) 00000-0000"  data-mask="(00) 00000-0000" data-mask-sectionFocus="true">
                 <span class="focus-input"></span>
                 <span class="symbol-input">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
                 </span>
             </div>
 
-            <div class="row col-12 align-items-center mt-5 pt-4 pl-2 pr-2">
+            <div class="row col-12 align-items-center mt-5 pt-5 pl-2 pr-2">
                 <!--- Voltar para Login --->
                 <div class="col-6 text-left">
                     <a class="sub-link" href="/Login/Login">
@@ -213,45 +216,56 @@
 
                 <!--- Botao Proximo --->
                 <div class="col-6 d-flex align-self-center justify-content-end pr-0">
-                    <button class="login-form-btn mt-2">
+                    <button id="btnProximo" class="login-form-btn mt-2">
                         Próximo
                     </button>
                 </div>
             </div>
         </div>
 
-        <div class="row col-12 form-second-part justify-content-between pl-5 pr-5">
-        
-        </div>
+        <div class="col-12 form-third-part justify-content-between text-center pl-5 pr-5" style="display: none">
+            Seleciona abaixo todas as categorias de fornecimento que tenha interesse: <br />
+            E não se preocupe se esquecer de alguma, pois será possível editar depois. 
 
-            <!--- Campos do Comprador Fisico -->
-            @*<div>
-                <br /> <br />
-                <input type="text" name="telefone" placeholder="(00) 0000-0000">
-                <input type="text" name="celular" placeholder="(00) 00000-0000">
-                <br /> <br />
-                <fieldset>
-                    <legend>Escolha as categorias do seu interesse:</legend>
-                    <div>
+            <div class="col-4 pt-5">
+                <div class="col-12 checkbox-container text-left mt-4 p-0">
+                    <label for="fastfood">
                         <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
-                        <label for="fastfood">Fastfood</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="esquadrias" name="esquadrias" value="esquadrias" />
-                        <label for="esquadrias">Esquadrias</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="pesca" name="pesca" value="pesca" />
-                        <label for="pesca">Pesca</label>
-                    </div>
-                    <div>
-                        <input type="checkbox" id="agropecuaria" name="agropecuaria" value="agropecuaria" />
-                        <label for="agropecuaria">Agropecuária</label>
-                    </div>
-                </fieldset>
-            </div>*@
+                        <span class="checkbox"></span>
+                        fastfood
+                    </label>
+                </div>
+                <div class="col-12 checkbox-container text-left mt-4 p-0">
+                    <label for="fastfood">
+                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
+                        <span class="checkbox"></span>
+                        fastfood
+                    </label>
+                </div>
+                <div class="col-12 checkbox-container text-left mt-4 p-0">
+                    <label for="fastfood">
+                        <input type="checkbox" id="fastfood" name="fastfood" value="fastfood" />
+                        <span class="checkbox"></span>
+                        fastfood
+                    </label>
+                </div>
+            </div>
 
-            @*<br /> <br />
-            <button id="btnCadastrar">Cadastrar</button>*@
+            <div class="row col-12 align-items-center mt-5 pt-4 pl-5 pr-5">
+                <!--- Voltar para etapa anterior --->
+                <div class="col-6 text-left">
+                    <button id="btnVoltar" class="fake-link sub-link">
+                       Voltar
+                    </button>
+                </div>
+
+                <!--- Botao Cadastrar --->
+                <div class="col-6 d-flex align-self-center justify-content-end pr-0">
+                    <button id="btnCadastrar" class="login-form-btn mt-2">
+                        Cadastrar
+                    </button>
+                </div>
+            </div>
+        </div>
     </form>
 </div>
