--- a/SupplierRanking/Views/Fornecedor/EnviarEmail.cshtml
+++ b/SupplierRanking/Views/Fornecedor/EnviarEmail.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Cadastro";
-    Layout = "~/Views/Shared/LoginLayout.cshtml";
+    ViewBag.Title = "EnviarEmail";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <div class="container-login100">
@@ -10,9 +10,9 @@
 
             <!--- Formulario para enviar e-mails -->
             <div id="">
-                <h2>clique no botao para redefinir sua senha </h2>
+                <h2>Digite o seu CNPJ para enviarmos um email de redefinição de senha para o seu email cadastrado. </h2>
                 <br />  <br />
-                <input type="text" name="emailDigitado" placeholder="Seu E-mail">
+                <input type="text" name="cnpj" placeholder="CNPJ">
                 <br />  <br/>
          
 
