--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -223,7 +223,7 @@
             </div>
         </div>
 
-        <div class="col-12 form-third-part justify-content-between text-center pl-5 pr-5" style="display: none">
+        <div class="col-12 form-third-part justify-content-between text-center pl-5 pr-5" >
             Seleciona abaixo todas as categorias de fornecimento que tenha interesse: <br />
             E não se preocupe se esquecer de alguma, pois será possível editar depois. 
 
