--- a/SupplierRanking/Content/css/style_login.css
+++ b/SupplierRanking/Content/css/style_login.css
@@ -140,3 +140,16 @@ iframe {
 .heading-section h2 {
     font-weight: 500; 
 }
+
+.hide {
+    display: none !important;
+}
+
+.error-msg {
+    font-weight: bold;
+}
+
+.disabled {
+    background: #C9C5C5 !important;
+    cursor: not-allowed !important;
+}
