--- a/SupplierRanking/Views/Login/Cadastro.cshtml
+++ b/SupplierRanking/Views/Login/Cadastro.cshtml
@@ -40,8 +40,7 @@
         </div>
 
         <!--- Pessoa Fisica & Pessoa Juridica --->
-        <div id="wrapperFisicaJuridica"
-             class="mt-4 pt-4">
+        <div id="wrapperFisicaJuridica" class="mt-4 pt-4 hide">
             Informe o seu tipo de perfil:
 
             <div class="row align-items-center justify-content-center mt-4">
@@ -72,5 +71,57 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="row col-12 cadastro-options justify-content-center p-5">
+
+        <span class="col-8 error-msg alert-danger text-center p-2 mt-3 mb-3 hide">
+            Preencha o(s) campo(s) corretamente! @(ViewBag.Message)
+        </span>
+
+        <!--- Voltar para Login --->
+        <div class="col-6 text-left d-flex align-items-center ">
+            <a class="sub-link" href="/Login/Login">
+                Login
+            </a>
+        </div>
+
+        <!--- Botao Proximo --->
+        @*<div class="col-6 d-flex align-self-center justify-content-end pr-0">
+        <button id="btnProximo" class="login-form-btn mt-2">
+            Próximo
+        </button>*@
+        @*</div>
+        </div>*@
+        <!--- Botao Entrar --->
+        <div class="col-6 d-flex justify-content-end align-items-center mt-2">
+            <button id="btnProximo" class="login-form-btn disabled mt-2" disabled>
+                Próximo
+            </button>
+        </div>
+
+
+        @*<div class="col-6 mt-3">
+            <!--- Esquci minha Senha --->
+            <div class="text-left">
+                <a class="sub-link" href="#">
+                    Esqueceu sua senha?
+                </a>
+            </div>
+
+            <!--- Criar Conta --->
+            <div class="text-left pt-3">
+                <a class="sub-link" href="/Login/Cadastro">
+                    Criar conta
+                </a>
+            </div>
+        </div>
+
+        <!--- Botao Entrar --->
+        <div class="col-6 d-flex justify-content-center align-items-center mt-2 pl-0 pr-4">
+            <button type="submit" class="login-form-btn disabled mt-2" disabled>
+                Entrar
+            </button>
+        </div>*@
     </div>
 </div>
